--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -102,6 +102,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
+allow 115.131.180.3;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -278,7 +279,6 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
-allow 185.132.53.150;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -295,9 +295,6 @@ allow 185.191.204.254;
 allow 185.191.239.172;
 allow 185.193.52.180;
 allow 185.195.71.244;
-allow 185.196.220.250;
-allow 185.196.220.38;
-allow 185.196.220.39;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.220.101.0;
@@ -496,9 +493,6 @@ allow 192.108.48.150;
 allow 192.159.99.168;
 allow 192.159.99.74;
 allow 192.210.136.31;
-allow 192.42.116.14;
-allow 192.42.116.15;
-allow 192.42.116.17;
 allow 192.42.116.173;
 allow 192.42.116.174;
 allow 192.42.116.175;
@@ -506,7 +500,6 @@ allow 192.42.116.176;
 allow 192.42.116.177;
 allow 192.42.116.178;
 allow 192.42.116.179;
-allow 192.42.116.18;
 allow 192.42.116.180;
 allow 192.42.116.181;
 allow 192.42.116.182;
@@ -514,7 +507,6 @@ allow 192.42.116.183;
 allow 192.42.116.184;
 allow 192.42.116.185;
 allow 192.42.116.186;
-allow 192.42.116.19;
 allow 192.42.116.191;
 allow 192.42.116.192;
 allow 192.42.116.193;
@@ -524,7 +516,6 @@ allow 192.42.116.196;
 allow 192.42.116.197;
 allow 192.42.116.198;
 allow 192.42.116.199;
-allow 192.42.116.20;
 allow 192.42.116.200;
 allow 192.42.116.201;
 allow 192.42.116.202;
@@ -541,12 +532,6 @@ allow 192.42.116.216;
 allow 192.42.116.217;
 allow 192.42.116.218;
 allow 192.42.116.219;
-allow 192.42.116.22;
-allow 192.42.116.23;
-allow 192.42.116.24;
-allow 192.42.116.26;
-allow 192.42.116.27;
-allow 192.42.116.28;
 allow 192.76.153.253;
 allow 193.105.134.150;
 allow 193.105.134.155;
@@ -676,18 +661,6 @@ allow 2001:67c:289c:4::79;
 allow 2001:67c:289c:4::80;
 allow 2001:67c:289c:4::81;
 allow 2001:67c:289c:4::82;
-allow 2001:67c:6ec:203:218:33ff:fe44:5514;
-allow 2001:67c:6ec:203:218:33ff:fe44:5515;
-allow 2001:67c:6ec:203:218:33ff:fe44:5517;
-allow 2001:67c:6ec:203:218:33ff:fe44:5518;
-allow 2001:67c:6ec:203:218:33ff:fe44:5519;
-allow 2001:67c:6ec:203:218:33ff:fe44:5520;
-allow 2001:67c:6ec:203:218:33ff:fe44:5522;
-allow 2001:67c:6ec:203:218:33ff:fe44:5523;
-allow 2001:67c:6ec:203:218:33ff:fe44:5524;
-allow 2001:67c:6ec:203:218:33ff:fe44:5526;
-allow 2001:67c:6ec:203:218:33ff:fe44:5527;
-allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -899,6 +872,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -926,8 +900,11 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -950,7 +927,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -973,6 +949,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1233,7 +1210,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1725,7 +1701,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1779,7 +1754,6 @@ allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1791,7 +1765,6 @@ allow 77.48.28.237;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.153.150.25;
-allow 78.159.131.103;
 allow 79.100.12.71;
 allow 80.241.60.207;
 allow 80.253.251.56;
@@ -1873,6 +1846,7 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
+allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
@@ -1894,7 +1868,6 @@ allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
 allow 94.74.164.89;
-allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
