--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -47,18 +47,6 @@ deny 2001:67c:289c:4::79;
 deny 2001:67c:289c:4::80;
 deny 2001:67c:289c:4::81;
 deny 2001:67c:289c:4::82;
-deny 2001:67c:6ec:203:218:33ff:fe44:5514;
-deny 2001:67c:6ec:203:218:33ff:fe44:5515;
-deny 2001:67c:6ec:203:218:33ff:fe44:5517;
-deny 2001:67c:6ec:203:218:33ff:fe44:5518;
-deny 2001:67c:6ec:203:218:33ff:fe44:5519;
-deny 2001:67c:6ec:203:218:33ff:fe44:5520;
-deny 2001:67c:6ec:203:218:33ff:fe44:5522;
-deny 2001:67c:6ec:203:218:33ff:fe44:5523;
-deny 2001:67c:6ec:203:218:33ff:fe44:5524;
-deny 2001:67c:6ec:203:218:33ff:fe44:5526;
-deny 2001:67c:6ec:203:218:33ff:fe44:5527;
-deny 2001:67c:6ec:203:218:33ff:fe44:5528;
 deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -133,7 +121,6 @@ deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -156,6 +143,7 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -415,7 +403,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
