--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -102,6 +102,7 @@ set_real_ip_from 109.71.252.182;
 set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 115.131.180.3;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -278,7 +279,6 @@ set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
-set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -295,9 +295,6 @@ set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.172;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.71.244;
-set_real_ip_from 185.196.220.250;
-set_real_ip_from 185.196.220.38;
-set_real_ip_from 185.196.220.39;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
 set_real_ip_from 185.220.101.0;
@@ -496,9 +493,6 @@ set_real_ip_from 192.108.48.150;
 set_real_ip_from 192.159.99.168;
 set_real_ip_from 192.159.99.74;
 set_real_ip_from 192.210.136.31;
-set_real_ip_from 192.42.116.14;
-set_real_ip_from 192.42.116.15;
-set_real_ip_from 192.42.116.17;
 set_real_ip_from 192.42.116.173;
 set_real_ip_from 192.42.116.174;
 set_real_ip_from 192.42.116.175;
@@ -506,7 +500,6 @@ set_real_ip_from 192.42.116.176;
 set_real_ip_from 192.42.116.177;
 set_real_ip_from 192.42.116.178;
 set_real_ip_from 192.42.116.179;
-set_real_ip_from 192.42.116.18;
 set_real_ip_from 192.42.116.180;
 set_real_ip_from 192.42.116.181;
 set_real_ip_from 192.42.116.182;
@@ -514,7 +507,6 @@ set_real_ip_from 192.42.116.183;
 set_real_ip_from 192.42.116.184;
 set_real_ip_from 192.42.116.185;
 set_real_ip_from 192.42.116.186;
-set_real_ip_from 192.42.116.19;
 set_real_ip_from 192.42.116.191;
 set_real_ip_from 192.42.116.192;
 set_real_ip_from 192.42.116.193;
@@ -524,7 +516,6 @@ set_real_ip_from 192.42.116.196;
 set_real_ip_from 192.42.116.197;
 set_real_ip_from 192.42.116.198;
 set_real_ip_from 192.42.116.199;
-set_real_ip_from 192.42.116.20;
 set_real_ip_from 192.42.116.200;
 set_real_ip_from 192.42.116.201;
 set_real_ip_from 192.42.116.202;
@@ -541,12 +532,6 @@ set_real_ip_from 192.42.116.216;
 set_real_ip_from 192.42.116.217;
 set_real_ip_from 192.42.116.218;
 set_real_ip_from 192.42.116.219;
-set_real_ip_from 192.42.116.22;
-set_real_ip_from 192.42.116.23;
-set_real_ip_from 192.42.116.24;
-set_real_ip_from 192.42.116.26;
-set_real_ip_from 192.42.116.27;
-set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.76.153.253;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
@@ -676,18 +661,6 @@ set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:289c:4::81;
 set_real_ip_from 2001:67c:289c:4::82;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5519;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5522;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -899,6 +872,7 @@ set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.113;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -926,8 +900,11 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -950,7 +927,6 @@ set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -973,6 +949,7 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1233,7 +1210,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1725,7 +1701,6 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1779,7 +1754,6 @@ set_real_ip_from 66.78.40.225;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
-set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
@@ -1791,7 +1765,6 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.153.150.25;
-set_real_ip_from 78.159.131.103;
 set_real_ip_from 79.100.12.71;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.253.251.56;
@@ -1873,6 +1846,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.94.51.243;
+set_real_ip_from 93.94.52.229;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.231.118;
@@ -1894,7 +1868,6 @@ set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.89;
-set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.168.173.143;
