--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -47,18 +47,6 @@ set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:289c:4::81;
 set_real_ip_from 2001:67c:289c:4::82;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5519;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5522;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -133,7 +121,6 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -156,6 +143,7 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -415,7 +403,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
