--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,7 +13,6 @@ allow 103.253.24.18;
 allow 103.28.52.93;
 allow 103.91.65.44;
 allow 104.167.241.4;
-allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
@@ -229,6 +228,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.1.26;
 allow 179.43.128.16;
 allow 179.43.134.19;
 allow 179.43.159.194;
@@ -897,10 +897,14 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1207,6 +1211,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1699,6 +1704,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1784,6 +1790,7 @@ allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
+allow 82.221.131.86;
 allow 82.221.139.190;
 allow 8.222.227.10;
 allow 83.147.17.190;
@@ -1857,7 +1864,6 @@ allow 93.99.104.18;
 allow 93.99.104.194;
 allow 93.99.104.40;
 allow 94.102.51.15;
-allow 94.131.2.186;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
