--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -121,6 +121,8 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
+set_real_ip_from 135.125.239.51;
+set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.59.85.179;
@@ -278,6 +280,7 @@ set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -555,6 +558,8 @@ set_real_ip_from 193.26.115.140;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.26.115.82;
+set_real_ip_from 193.32.162.104;
+set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -563,6 +568,7 @@ set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.177;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.55.167.14;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
@@ -572,6 +578,7 @@ set_real_ip_from 195.246.231.197;
 set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
 set_real_ip_from 195.47.238.178;
+set_real_ip_from 195.47.238.44;
 set_real_ip_from 195.47.238.82;
 set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
@@ -627,6 +634,8 @@ set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
+set_real_ip_from 2001:41d0:701:1100::57d3;
+set_real_ip_from 2001:41d0:701:1100::968d;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
@@ -898,6 +907,7 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.7;
@@ -1212,7 +1222,6 @@ set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
-set_real_ip_from 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
@@ -1394,6 +1403,7 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
+set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
@@ -1415,6 +1425,8 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fee6:ca14;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
 set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
+set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0e:1d80:13:b6d5::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1707,7 +1719,6 @@ set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
-set_real_ip_from 5.255.118.151;
 set_real_ip_from 5.255.118.218;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
@@ -1790,7 +1801,6 @@ set_real_ip_from 82.221.139.190;
 set_real_ip_from 8.222.227.10;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
-set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
@@ -1842,6 +1852,7 @@ set_real_ip_from 91.227.114.153;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
+set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
